k8s/app/Ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: traefik-ingress
    namespace: hduhelp
spec:
  ingressClassName: traefik
  rules:
  - host: dsn  # 这里要换成与你的ip绑定的域名
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gin-quickly-template-service
            port:
              number: 8080
